--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,5 @@ include(VersionInfo)
 add_library(pinchot SHARED ${C_API_SOURCES})
 target_link_libraries(pinchot ${CMAKE_THREAD_LIBS_INIT})
 install(TARGETS pinchot DESTINATION ${SRC_DIR})
+install(TARGETS pinchot DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(FILE joescan_pinchot.h ${CMAKE_INSTALL_INCLUDEDIR})
