Another typo fix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,4 @@ add_library(pinchot SHARED ${C_API_SOURCES})
 target_link_libraries(pinchot ${CMAKE_THREAD_LIBS_INIT})
 install(TARGETS pinchot DESTINATION ${SRC_DIR})
 install(TARGETS pinchot DESTINATION ${CMAKE_INSTALL_LIBDIR})
-install(FILES joescan_pinchot.h ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES joescan_pinchot.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
