Trying to get includes exported

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,9 @@ set(PINCHOT_API_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 include(CAPISources)
 include(VersionInfo)
-
+target_include_directories(pinchot, PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>)
+  
 add_library(pinchot SHARED ${C_API_SOURCES})
 target_link_libraries(pinchot ${CMAKE_THREAD_LIBS_INIT})
 install(TARGETS pinchot DESTINATION ${SRC_DIR})
